--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 
     <main>
       <div class="flex-container">
-        <div class="column">
+        <div class="button-row">
           <textarea
             id="texto"
             placeholder="Escreve o texto para criptografar"
           ></textarea>
-        </div>
-        <div class="column">
+
           <div id="resultado">
             <img src="./imgs/img_lupa.jpg" alt="" srcset="" />
           </div>
