--- a/index.html
+++ b/index.html
@@ -14,25 +14,19 @@
       <h2>Criptografia e Descriptografia</h2>
     </header>
 
-    <main>
-      <div class="flex-container">
-        <div class="button-row">
-          <textarea
-            id="texto"
-            placeholder="Escreve o texto para criptografar"
-          ></textarea>
+    <main class="container">
+      <div class="container__text">
+        <textarea
+          id="texto"
+          placeholder="Escreve o texto para criptografar"
+        ></textarea>
 
-          <div id="resultado">
-            <img src="./imgs/img_lupa.jpg" alt="" srcset="" />
-          </div>
-        </div>
+        <div id="resultado"></div>
       </div>
 
-      <div class="flex-container">
-        <div class="button-row">
-          <button onclick="wordEncrypt()">Criptografar</button>
-          <button onclick="wordDecrypt()">Descriptografar</button>
-        </div>
+      <div class="button-row">
+        <button onclick="wordEncrypt()">Criptografar</button>
+        <button onclick="wordDecrypt()">Descriptografar</button>
       </div>
     </main>
 
