style: adjusts in text boxs, font formations

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           placeholder="Escreve o texto para criptografar"
         ></textarea>
 
-        <div id="resultado"></div>
+        <div id="resultado">
+          <div id="resultElement"></div>
+        </div>
       </div>
 
       <div class="button-row">
