style: adjusts in footer.  Adding social media nav

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 
     <footer>
       Desenvolvido por Ricardo Barbosa &copy; <span id="year"></span>
+      <nav class="social-media-links">
+        <a href="https://www.linkedin.com/in/ricardo-santos-barbosa1/"
+          ><i class="fa-brands fa-linkedin fa-2xl"></i
+        ></a>
+        <a href="https://github.com/ricardobarbosadev!"
+          ><i class="fa-brands fa-github fa-2xl"></i
+        ></a>
+        <a href="https://www.instagram.com/ricardo_sbarbosa/"
+          ><i class="fa-brands fa-square-instagram fa-2xl"></i
+        ></a>
+      </nav>
     </footer>
 
     <script defer src="./encrypt.js"></script>
@@ -41,5 +52,9 @@
     <script>
       document.getElementById("year").innerText = new Date().getFullYear();
     </script>
+    <script
+      src="https://kit.fontawesome.com/81ec08cc85.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
